fix overlay alignment on next and prev buttons

--- a/client/css/overlays/states.css
+++ b/client/css/overlays/states.css
@@ -410,11 +410,11 @@ div:nth-of-type(1) > .list > .roomState .star {
 }
 #prevState button, #nextState button {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #fff8;
+  top: -2px;
+  left: -2px;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  background: #fffa;
 }
 #prevState button i, #nextState button i {
   color: black;
